# silent-cut-for-fcp

./: .gitmodules  LICENSE  README-ko.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: rust.yml
src/: App.css  App.tsx  i18n.ts  interface.ts  useCommand.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/detector/: analyzer.rs  converter.rs  deepfilter.rs  fcpxml.rs  mod.rs
src/components/: LanguageSwitcher.tsx
src/locales/: en.json  ko.json
