[package]
name = "silent-cut-for-fcp"
version = "1.0.0"
description = "A silent cut for Final Cut Pro"
authors = ["Joo-Kwang Park"]
edition = "2021"
repository = "https://github.com/jookwang-park/silent-cut-for-fcp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "silent_cut_for_fcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xml-builder = "0.5.4"
ez-ffmpeg = { version = "0.4.1", features = ["opengl"] }
symphonia = "0.5.4"
thiserror = "2.0.12"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
hound = "3.5.1"

deep_filter = { path = "./mods/DeepFilterNet/libDF", features = [
    "default-model",
    "tract",
    "wav-utils",
    "transforms",
] }
ndarray = { version = "0.15.6" }
